--- a/styles/comics.css
+++ b/styles/comics.css
@@ -1030,7 +1030,7 @@ body {
   justify-content: space-between;
   align-items: center;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
-  z-index: 100;
+  z-index: 10;
   transition: bottom 0.3s ease;
 }
 
@@ -1645,7 +1645,6 @@ body {
   }
 }
 
-
 .marvel-footer {
   text-align: center;
   padding: 20px;
@@ -1656,12 +1655,12 @@ body {
   width: 100%;
   font-size: 14px;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
-  z-index: 100;
+  z-index: 10;
 }
 
 .marvel-footer p {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 /* Ajuste para el contenido principal */
