--- a/styles/heroes.css
+++ b/styles/heroes.css
@@ -625,12 +625,12 @@ body {
   width: 100%;
   font-size: 14px;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
-  z-index: 100;
+  z-index: 10;
 }
 
 .marvel-footer p {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 /* Ajuste para el contenido principal */
